# sam-mosaic

./: .gitignore  CITATION.cff  ENVIRONMENT.md  LICENSE  README.md  SETUP_EXPERIMENT.md  environment.yml  main.tex  pyproject.toml  references.bib  run_with_vram_monitor.py
checkpoints/: README.md
config/: default.yaml
configs/: example.yaml
docs/: configuration.md  methodology.md
examples/: ablation_example.py  basic_usage.py
experiments/exp_full_v2/: README.md  config.yaml  run.py
experiments/paper_jag/scripts/: fig_multipass_compose.py  fig_multipass_final.py  fig_multipass_progression.py  fig_multipass_v2.py  pick_potsdam_run.py  pick_potsdam_tile.py  run_samgeo2_timing.py
experiments/paper_jag/submission/: cover_letter.tex  highlights.tex
experiments/paper_jag/submission/latex/: main.tex  references.bib
experiments/paper_jag/submission/methodsx/: main.tex  specs.md
experiments/paper_jag/submission_final/: cover_letter.tex  main.tex
jag_paper/specs/sec5_results/: spec_v2.md
jag_paper/specs/sec5_results/quality/scripts/: calibrate_felz_fast.py  eval_all_perclass_asa.py  eval_felz_v2.py  eval_slic_nseg.py
scripts/: run_pipeline.py
src/sam_mosaic/: __init__.py  api.py  cli.py  config.py  pipeline.py  postprocess.py
src/sam_mosaic/config/: __init__.py  loader.py  schema.py
src/sam_mosaic/core/: __init__.py  mosaic.py  multipass.py  pipeline.py  tile.py
src/sam_mosaic/io/: __init__.py  loader.py  reader.py  writer.py
src/sam_mosaic/merge/: __init__.py  bands.py  combined.py  discontinuity.py  enclosed.py  small.py
src/sam_mosaic/points/: __init__.py  dense_grid.py  filter.py  grids.py  kmeans.py  uniform.py
src/sam_mosaic/sam/: __init__.py  masks.py  predictor.py
src/sam_mosaic/segmentation/: __init__.py  cascade.py  sam.py
src/sam_mosaic/tiling/: __init__.py  borders.py  grid.py
src/sam_mosaic/vectorize/: __init__.py  polygonize.py
